--- a/src/fragments/lib/auth/js/social.mdx
+++ b/src/fragments/lib/auth/js/social.mdx
@@ -149,7 +149,7 @@ const updatedAwsConfig = {
   }
 }
 
-Amplify.configure(updatedAwsConfig);
+Amplify.configure(awsConfig);
 ```
 
 ### Full Sample
@@ -189,7 +189,7 @@ const updatedAwsConfig = {
   }
 }
 
-Amplify.configure(updatedAwsConfig);
+Amplify.configure(awsConfig);
 
 function App() {
   const [user, setUser] = useState(null);
